--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/itslewisndungu/hng9-task-2/issues"
   },
-  "homepage": "https://github.com/itslewisndungu/hng9-task-2#readme"
+  "homepage": "https://github.com/itslewisndungu/hng9-task-2#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
